// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider component Should default render 1`] = `
<div>
  <div
    class="APMSlider"
  >
    <div
      class="APMSlider-value"
    />
    <div
      class="APMSlider-handle"
      data-testid="slider-handle"
      style="height: 38px; width: 38px;"
    />
  </div>
</div>
`;

exports[`Slider component Should match snapshot with className prop 1`] = `
<div>
  <div
    class="APMSlider RidelsMPA"
  >
    <div
      class=" APMSlider-value RidelsMPA-value"
    />
    <div
      class=" APMSlider-handle RidelsMPA-handle"
      data-testid="slider-handle"
      style="height: 38px; width: 38px;"
    />
  </div>
</div>
`;

exports[`Slider component Should match snapshot with maxPercentage 1`] = `
<div>
  <div
    class="APMSlider"
  >
    <div
      class="APMSlider-value"
    />
    <div
      class="APMSlider-right-constraint"
      style="width: 20%;"
    />
    <div
      class="APMSlider-handle"
      data-testid="slider-handle"
      style="height: 38px; width: 38px;"
    />
  </div>
</div>
`;

exports[`Slider component Should match snapshot with minPercentage 1`] = `
<div>
  <div
    class="APMSlider"
  >
    <div
      class="APMSlider-value"
    />
    <div
      class="APMSlider-left-constraint"
      style="width: 10%;"
    />
    <div
      class="APMSlider-handle"
      data-testid="slider-handle"
      style="height: 38px; width: 38px;"
    />
  </div>
</div>
`;

exports[`Slider component Should match snapshot with prop defaultPercentage prop 1`] = `
<div>
  <div
    class="APMSlider"
  >
    <div
      class="APMSlider-value"
    />
    <div
      class="APMSlider-handle"
      data-testid="slider-handle"
      style="height: 38px; width: 38px;"
    />
  </div>
</div>
`;
